[gd_scene load_steps=51 format=3 uid="uid://r1mp4rmj3yn"]

[ext_resource type="PackedScene" uid="uid://qko5kwe3tkkr" path="res://actors/max_ammo.tscn" id="1_rdntb"]
[ext_resource type="Script" path="res://wearpons/katana.gd" id="1_wdtet"]
[ext_resource type="PackedScene" uid="uid://d0vwhrxna5oq2" path="res://actors/max_charge.tscn" id="2_86eoi"]
[ext_resource type="PackedScene" uid="uid://cmim3djf6s1ju" path="res://States/swing_anim.tscn" id="2_dr26d"]
[ext_resource type="PackedScene" uid="uid://dkc6cl0itawju" path="res://bullets/fire_path.tscn" id="2_tnbse"]
[ext_resource type="PackedScene" uid="uid://bo3bcubotgnaa" path="res://actors/max_reload.tscn" id="3_3blog"]
[ext_resource type="PackedScene" uid="uid://bkib36xl7f6mu" path="res://actors/ammo.tscn" id="4_5ymqw"]
[ext_resource type="PackedScene" uid="uid://casvp34hmo6be" path="res://actors/charge_level.tscn" id="5_rhc3g"]
[ext_resource type="PackedScene" uid="uid://bn2qjyaov1sg8" path="res://actors/reload.tscn" id="6_mkb05"]
[ext_resource type="Texture2D" uid="uid://ctmsswg4a3kgt" path="res://pixel art/katana_sheet (3).png" id="9_ydldb"]
[ext_resource type="Texture2D" uid="uid://drko3rp1uuvoo" path="res://pixel art/flamebreaker_smear_under.png" id="11_1s4bq"]
[ext_resource type="Texture2D" uid="uid://b7fn4h4gm1o1x" path="res://pixel art/katana_dash_smear.png" id="12_lsp8g"]
[ext_resource type="Texture2D" uid="uid://b7go74r2pvf0b" path="res://pixel art/flamebreaker_smear_over.png" id="12_vf05b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qwve7"]
atlas = ExtResource("9_ydldb")
region = Rect2(1940, 730, 970, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_svb7d"]
atlas = ExtResource("9_ydldb")
region = Rect2(1940, 1460, 970, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_db7ti"]
atlas = ExtResource("9_ydldb")
region = Rect2(0, 0, 970, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dfm1"]
atlas = ExtResource("9_ydldb")
region = Rect2(970, 0, 970, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_ui64q"]
atlas = ExtResource("9_ydldb")
region = Rect2(0, 730, 970, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_glqi7"]
atlas = ExtResource("9_ydldb")
region = Rect2(1940, 0, 970, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_48dd6"]
atlas = ExtResource("9_ydldb")
region = Rect2(970, 730, 970, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8wht"]
atlas = ExtResource("9_ydldb")
region = Rect2(0, 1460, 970, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fu1n"]
atlas = ExtResource("9_ydldb")
region = Rect2(970, 1460, 970, 730)

[sub_resource type="SpriteFrames" id="SpriteFrames_n2cip"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwve7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svb7d")
}],
"loop": true,
"name": &"alt_fire",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_db7ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dfm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ui64q")
}],
"loop": true,
"name": &"attack_1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_glqi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48dd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8wht")
}],
"loop": true,
"name": &"attack_2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fu1n")
}],
"loop": true,
"name": &"default",
"speed": 16.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_h8slb"]

[sub_resource type="Animation" id="Animation_ib8l3"]
length = 0.001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("anim_maneger/gunsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("anim_maneger/gunsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("anim_maneger/smear_under:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("anim_maneger/smear_over:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("melee_hitbox/CollisionShape2D2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("anim_maneger/smear_over:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("anim_maneger/smear_under:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("anim_maneger/gunsprite:z_index")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("anim_maneger/dash_under:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("anim_maneger/dash_over:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("alt_hitbox/CollisionShape2D:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1gxlg"]
resource_name = "alt_fire"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("anim_maneger/gunsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"alt_fire"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("anim_maneger/gunsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("anim_maneger/dash_under:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("anim_maneger/dash_over:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("anim_maneger/gunsprite:z_index")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("alt_hitbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_pqd4u"]
resource_name = "attack 1"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("anim_maneger/gunsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack_1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("anim_maneger/gunsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("anim_maneger/smear_over:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("anim_maneger/smear_over:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("anim_maneger/smear_under:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("anim_maneger/smear_under:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("melee_hitbox/CollisionShape2D2:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("anim_maneger/gunsprite:z_index")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-2]
}

[sub_resource type="Animation" id="Animation_tmdyy"]
resource_name = "attack 2"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("anim_maneger/gunsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack_2"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("anim_maneger/gunsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("anim_maneger/smear_over:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("anim_maneger/smear_over:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("anim_maneger/smear_under:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("anim_maneger/smear_under:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("melee_hitbox/CollisionShape2D2:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("anim_maneger/gunsprite:z_index")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kb4o8"]
resource_name = "default"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("anim_maneger/gunsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("anim_maneger/gunsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("anim_maneger/smear_under:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("anim_maneger/smear_over:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("melee_hitbox/CollisionShape2D2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("anim_maneger/gunsprite:z_index")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("anim_maneger/dash_under:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("anim_maneger/dash_over:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ck7e0"]
_data = {
"RESET": SubResource("Animation_ib8l3"),
"alt_fire": SubResource("Animation_1gxlg"),
"attack 1": SubResource("Animation_pqd4u"),
"attack 2": SubResource("Animation_tmdyy"),
"default": SubResource("Animation_kb4o8")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e1rhx"]
animation = &"alt_fire"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m7tes"]
animation = &"attack 1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_504qx"]
animation = &"attack 2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7wqox"]
animation = &"default"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aiyno"]
advance_mode = 2
advance_condition = &"attack_1"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kupjs"]
advance_mode = 2
advance_condition = &"attack_2"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d6xl2"]
advance_mode = 2
advance_condition = &"attack_1"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bm27p"]
advance_mode = 2
advance_condition = &"attack_2"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_niilb"]
switch_mode = 2
advance_mode = 2
advance_condition = &"default"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s3fa1"]
switch_mode = 2
advance_mode = 2
advance_condition = &"default"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rwvhb"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_g7jo0"]
advance_mode = 2
advance_condition = &"alt_fire"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6wsxo"]
switch_mode = 2
advance_mode = 2
advance_condition = &"default"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x88mc"]
switch_mode = 2
advance_mode = 2
advance_condition = &"attack_2"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vi4h6"]
switch_mode = 2
advance_mode = 2
advance_condition = &"alt_fire"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2amup"]
switch_mode = 2
advance_mode = 2
advance_condition = &"attack_1"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h8xde"]
switch_mode = 2
advance_mode = 2
advance_condition = &"alt_fire"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_7sobi"]
states/Start/position = Vector2(146, 46)
states/alt_fire/node = SubResource("AnimationNodeAnimation_e1rhx")
states/alt_fire/position = Vector2(560, 220)
"states/attack 1/node" = SubResource("AnimationNodeAnimation_m7tes")
"states/attack 1/position" = Vector2(560, 46)
"states/attack 2/node" = SubResource("AnimationNodeAnimation_504qx")
"states/attack 2/position" = Vector2(281, 220)
states/default/node = SubResource("AnimationNodeAnimation_7wqox")
states/default/position = Vector2(281, 46)
transitions = ["default", "attack 1", SubResource("AnimationNodeStateMachineTransition_aiyno"), "default", "attack 2", SubResource("AnimationNodeStateMachineTransition_kupjs"), "attack 2", "attack 1", SubResource("AnimationNodeStateMachineTransition_d6xl2"), "attack 1", "attack 2", SubResource("AnimationNodeStateMachineTransition_bm27p"), "attack 2", "default", SubResource("AnimationNodeStateMachineTransition_niilb"), "attack 1", "default", SubResource("AnimationNodeStateMachineTransition_s3fa1"), "Start", "default", SubResource("AnimationNodeStateMachineTransition_rwvhb"), "default", "alt_fire", SubResource("AnimationNodeStateMachineTransition_g7jo0"), "alt_fire", "default", SubResource("AnimationNodeStateMachineTransition_6wsxo"), "alt_fire", "attack 2", SubResource("AnimationNodeStateMachineTransition_x88mc"), "attack 2", "alt_fire", SubResource("AnimationNodeStateMachineTransition_vi4h6"), "alt_fire", "attack 1", SubResource("AnimationNodeStateMachineTransition_2amup"), "attack 1", "alt_fire", SubResource("AnimationNodeStateMachineTransition_h8xde")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x5lrt"]
size = Vector2(616, 432)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a8jpj"]
size = Vector2(1088, 304)

[node name="katana" type="CharacterBody2D" node_paths=PackedStringArray("barrel_origin")]
script = ExtResource("1_wdtet")
alt_fire = ExtResource("2_tnbse")
swing_anim = ExtResource("2_dr26d")
barrel_origin = NodePath("nuzzel")

[node name="max_ammo" parent="." instance=ExtResource("1_rdntb")]

[node name="max_charge" parent="." instance=ExtResource("2_86eoi")]

[node name="max_reload" parent="." instance=ExtResource("3_3blog")]

[node name="ammo" parent="." instance=ExtResource("4_5ymqw")]
ammo = 0

[node name="charge_level" parent="." instance=ExtResource("5_rhc3g")]

[node name="reload" parent="." instance=ExtResource("6_mkb05")]

[node name="anim_maneger" type="Node2D" parent="."]

[node name="gunsprite" type="AnimatedSprite2D" parent="anim_maneger"]
z_index = -1
position = Vector2(0, -36)
sprite_frames = SubResource("SpriteFrames_n2cip")

[node name="smear_under" type="Sprite2D" parent="anim_maneger"]
visible = false
z_index = -1
z_as_relative = false
position = Vector2(0, -36)
texture = ExtResource("11_1s4bq")
hframes = 2
vframes = 2

[node name="smear_over" type="Sprite2D" parent="anim_maneger"]
visible = false
position = Vector2(0, -36)
texture = ExtResource("12_vf05b")
hframes = 2
vframes = 2

[node name="dash_under" type="Sprite2D" parent="anim_maneger"]
visible = false
z_index = -1
position = Vector2(0, -36)
texture = ExtResource("12_lsp8g")
vframes = 2
frame = 1

[node name="dash_over" type="Sprite2D" parent="anim_maneger"]
visible = false
position = Vector2(0, -36)
texture = ExtResource("12_lsp8g")
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_h8slb")
disabled = true

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ck7e0")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_7sobi")
anim_player = NodePath("../anim")
parameters/conditions/alt_fire = false
parameters/conditions/attack_1 = false
parameters/conditions/attack_2 = false
parameters/conditions/default = false

[node name="reload_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="nuzzel" type="Marker2D" parent="."]
position = Vector2(-280, 0)
gizmo_extents = 1.0

[node name="melee_hitbox" type="Area2D" parent="."]
collision_layer = 18
collision_mask = 18

[node name="CollisionShape2D2" type="CollisionShape2D" parent="melee_hitbox"]
position = Vector2(196, 8)
shape = SubResource("RectangleShape2D_x5lrt")
disabled = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(792, 0)

[node name="alt_hitbox" type="Area2D" parent="."]
collision_layer = 18
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="alt_hitbox"]
position = Vector2(-280, 0)
shape = SubResource("RectangleShape2D_a8jpj")
disabled = true

[connection signal="area_entered" from="melee_hitbox" to="." method="_on_melee_hitbox_area_entered"]
[connection signal="body_entered" from="melee_hitbox" to="." method="_on_melee_hitbox_body_entered"]
[connection signal="area_entered" from="alt_hitbox" to="." method="_on_alt_hitbox_area_entered"]
[connection signal="body_entered" from="alt_hitbox" to="." method="_on_alt_hitbox_body_entered"]
